--- a/webservice/static/css/semantic.css
+++ b/webservice/static/css/semantic.css
@@ -4744,7 +4744,7 @@ input::selection {
 
 .ui.text.container {
   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  max-width: 700px !important;
+  max-width: 90% !important;
   line-height: 1.5;
 }
 
