--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -43,6 +43,11 @@
     <script src="{{pomspath}}/static/js/tablesort.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/poms.css">
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/data-dispatcher.css">
+    <script>
+      var pomspath = "{{pomspath}}";
+      var session_experiment = "{{session_experiment}}";
+      var session_role = "{{session_role}}";
+    </script>
     <link href='{{pomspath}}/static/css/fullcalendar.css' rel='stylesheet' />
     <link href='{{pomspath}}/static/css/fullcalendar.print.css' rel='stylesheet' media='print' />
     <script src='{{pomspath}}/static/js/moment.min.js'></script>
