--- a/webservice/static/css/poms.css
+++ b/webservice/static/css/poms.css
@@ -2087,6 +2087,7 @@ code .chunk {
     padding: 0.5rem 0.25rem;
 }
 
+
 /*******************************
  *            Advert
  *            *******************************/
@@ -2528,3 +2529,22 @@ code .chunk {
         /*display: initial;*/
         visibility: visible;
     }
+
+    .expandable {
+        font-size: large;
+        height: 30px;
+        width: 100%;
+        max-width: 48%;
+        border-radius:10px;
+        margin: 5px;
+        background-color: aqua;
+        border-style: solid;
+        border-width: 1px;
+        border-color: black;
+        box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+      }
+      .expandable:hover{
+        cursor: pointer;
+        box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+        font:bolder;
+      }
