--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -80,7 +80,7 @@
       <a class="item" href="{{pomspath}}/show_campaign_stages/{{session_experiment}}/{{session_role}}">
         Campaign Stages
       </a>
-      <a class="item" href="{{pomspath}}/data_dispatcher_test/{{session_experiment}}/{{session_role}}">
+      <a class="item" href="{{pomspath}}/data_dispatcher_overview/{{session_experiment}}/{{session_role}}">
         Data Dispatcher
       </a>
       <a class="item" href="{{pomspath}}/sample_workflows/{{session_experiment}}/{{session_role}}">
