--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -5,7 +5,7 @@
 POMS:Submission #{{submission.submission_id}}: {{submission.jobsub_job_id}} Details
 {%endblock%}
 
-
+<script src="{{pomspath}}/static/js/data_dispatcher.js"></script>
 {%block header%}
 Submission Details {%include 'help_button.html'%}
 {%endblock%}
@@ -117,8 +117,9 @@ Dependencies launched:
 <!-- submission_log_format {{submission_log_format}}
 View <a href="{{pomspath}}/list_launch_file?/{{session_experiment}}/{{session_role}}campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
 -->
-
-{%if submission_log_format == 3 %}
+{%if submission_log_format == 4 %}
+View <a href="{{pomspath}}/list_launch_file/{{session_experiment}}/{{session_role}}?campaign_stage_id={{submission.campaign_stage_id}}&submission_id={{submission.submission_id}}">launch output </a> <br>
+{%elif submission_log_format == 3 %}
 View <a href="{{pomspath}}/list_launch_file/{{session_experiment}}/{{session_role}}?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
 {%elif submission_log_format == 2%}
 View <a href="{{pomspath}}/list_launch_file/{{session_experiment}}/{{session_role}}?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}">launch output </a> <br>
@@ -223,6 +224,7 @@ Launch Recovery for Submission
 
 </div>
 </div>
+{% include 'data_dispatcher_projects.html' %}
 <div class="ui horizontal segments">
 <div class="ui segment raised">
 <h3>Submission fields</h3>
