--- a/webservice/templates/data_dispatcher_overview.html
+++ b/webservice/templates/data_dispatcher_overview.html
@@ -59,7 +59,7 @@
             </div>
             <div class="item">
                 <label for="experiment">Environment: </label>
-                <a id="experiment">{{dd_experiment if dd_experiment else 'N/A'}}</a>
+                <a id="experiment">{{experiment if experiment else 'N/A'}}</a>
             </div>
             <div id="timestamp-item" class="item">
                 <label for="timeTillExpire">Token TTL: </label>
