--- a/webservice/static/css/data-dispatcher.css
+++ b/webservice/static/css/data-dispatcher.css
@@ -86,6 +86,12 @@
   position: relative;
   display: inline-block;
 }
+#project_state_selector{
+  background-color: white;
+  font-size: larger;
+  font-weight: bold;
+  color: #042b42;
+}
 
 .dd-search-container .dd-search-result-icon {
   opacity: 0;
@@ -112,12 +118,12 @@
 }
 
 .dd-results-row-label{
-    font-size: large;
+    font-size: medium;
     min-height: 42%;
     width:100%;
-    max-width: 48%;
-    margin-right: 5px;
-    margin-left: 5px;
+    max-width: 19%;
+    margin-right: 3px;
+    margin-left: 3px;
     height: 35px;
     text-align: center;
     background-color: gainsboro;
@@ -162,26 +168,29 @@
   flex-wrap: wrap;
 }
 .dd-results-row {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    border-style: solid;
-    border-width: 2px;
-    border-color: black;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    justify-content: center;
-    max-height: 600px;
-    overflow-y: scroll;
+  width: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px,max-content));
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  max-height: 600px;
+  overflow-y: scroll;
+  grid-auto-flow: dense;
+  grid-auto-rows: minmax(100px,max-content);
 }
-
+.dd-row-toggle-active .dd-results-card{
+  opacity: 1;
+}
+.dd-row-toggle-inactive .dd-results-card{
+  opacity: 0;
+}
 .dd-results-card {
-    min-width: 400px;
-    min-height: 100px;
-    width: 48%;
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    transition: opacity 0.5s;
     border-radius: 10px;
     margin-right: 5px;
     position: relative;
@@ -206,40 +215,45 @@
   }
 
   .dd-results-card-header {
+    position: relative;
+    top: 0;
     overflow-wrap: break-word;
     flex-wrap: wrap;
     text-align: center;
     font-weight: bold;
     padding: 5px;
+    width: 100%;
     background-color: rgba(81, 178, 172, 0.9);
   }
   
 
   .dd-results-card-body {
+    position: relative;
+    margin-bottom: 30px;
     padding: 5px;
     display: inline-block;
-    flex-wrap: wrap;
     flex-grow: 1;
     padding: 10px;
-    height: auto;
+    height: max-content;
   }
   .dd-results-card-footer {
+    padding-top:5px;
     transition: 0.3s;
     border-radius: 10px;
     background-color: gainsboro;
     text-align: center;
     align-content: center;
     width: 100%;
-    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     bottom: 0;
-    position: relative;
+    position: absolute;
     padding: 5px;
   }
   .dd-results-card-footer:hover {
     transition: 0.3s;
     cursor: pointer;
     color: #0000EE;
-    box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
   }
   .dd-results-card-footer-active {
     background-color: blue;
@@ -250,10 +264,15 @@
     cursor: pointer;
     color: white;
     transition: 0.3s;
-    box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
   }
   .dd-results-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  .dd-results-card{
+    position: relative;
+    width: fit-content;
+    height: fit-content;
   }
   .project_handles_segment{
     min-height: 60px;
