--- a/webservice/templates/data_dispatcher_project_controller.html
+++ b/webservice/templates/data_dispatcher_project_controller.html
@@ -1,4 +1,4 @@
-{% if data_dispatcher_projects and (data_dispatcher_projects.active_count > 0 or data_dispatcher_projects.inactive_count > 0) %}
+{% if data_dispatcher_projects and (data_dispatcher_projects.projects_active_count > 0 or data_dispatcher_projects.projects_inactive_count > 0 or data_dispatcher_projects.projects_done_count > 0 or data_dispatcher_projects.projects_failed_count > 0 or data_dispatcher_projects.projects_cancelled_count > 0 or data_dispatcher_projects.projects_abandoned_count > 0) %}
 <div class="ui horizontal segments">
     <div class="ui segment raised" style="max-width: 50%;">
 		<h3>Update Project</h3>
