submission broker looks at all existing launches at once and quickly deals with the results.
incorporated data dispatcher projects into submission agent.

Need to create "update_submissions" function to handle multiple updates at once.

Other things

--- a/webservice/static/css/poms.css
+++ b/webservice/static/css/poms.css
@@ -139,7 +139,10 @@ blockquote .author {
     width: 35px;
     margin-right: 1em;
 }
-
+.fa-circle-question:hover{
+    cursor: pointer;
+    color: #6DFFFF;
+}
 #example #toc > :last-child {
     padding-bottom: 2em;
 }
