--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -11,7 +11,11 @@
 
 <script src="{{pomspath}}/static/js/json_field_editor.js"></script>
 <script src="{{pomspath}}/static/js/split_type_picker.js"></script>
-<script src="{{pomspath}}/split_type_javascript"></script>
+{% if data.campaign_stages[0].Campaign.data_handling_service == "data_dispatcher" %}
+<script src="{{pomspath}}/split_type_javascript?data_dispatcher=true"></script>
+{% else %}
+<script src="{{pomspath}}/split_type_javascript?data_dispatcher=false"></script>
+{% endif %}
 <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/json_field_editor.css">
 {%endblock%}
 
@@ -492,6 +496,10 @@ $('#campaign_add_edit_form')
       ae_vo_role :                'empty',
       ae_active :                 'empty',
       ae_software_version :       'empty',
+      ae_split_type :             'empty',
+      ae_launch_id :              'empty',
+      ae_campaign_definition_id : 'empty',
+      ae_cronjon:                 'empty',
       ae_dataset :{
         identifier: "ae_dataset",
         rules: [
@@ -501,10 +509,6 @@ $('#campaign_add_edit_form')
           }
         ]
       },
-      ae_split_type :             'empty',
-      ae_launch_id :              'empty',
-      ae_campaign_definition_id : 'empty',
-      ae_cronjon:                 'empty',
     },
     // Custom validation function
     custom_validation: function(value, field) {
