Finishing touches with faster queries, updates to split types (to run param launch, rather than project launch) Modifications to UI

--- a/webservice/static/css/data-dispatcher.css
+++ b/webservice/static/css/data-dispatcher.css
@@ -236,6 +236,9 @@
     padding: 10px;
     height: max-content;
   }
+  .dd-results-card-body a span {
+    word-break: break-word;
+  }
   .dd-results-card-footer {
     padding-top:5px;
     transition: 0.3s;
